manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: addtodo
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: addtodo

  template: 
    metadata:
      labels:
        app: addtodo
    spec:
      containers:
      - name: con 
        image: anjaliacr.azurecr.io/addtodo:v1
        ports:
        - containerPort: 8000
